<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout_fragment_community"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextAppearance="@style/TabText"
        app:tabSelectedTextColor="@color/background_light_green"
        app:tabIndicatorColor="@color/background_light_green"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/tablayout_fragment_community"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup_fragment_community"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_fragment_community_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_community_chip_all"
                android:textColor="@color/grey_00"
                app:chipBackgroundColor="@color/grey_09"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_fragment_community_myboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_community_chip_myboard"
                android:textColor="@color/grey_00"
                app:chipBackgroundColor="@color/grey_09"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_fragment_community_mycomment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_community_chip_mycomment"
                android:textColor="@color/grey_00"
                app:chipBackgroundColor="@color/grey_09"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_fragment_community_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_community_chip_like"
                android:textColor="@color/grey_00"
                app:chipBackgroundColor="@color/grey_09"/>

        </com.google.android.material.chip.ChipGroup>

        <FrameLayout
            android:id="@+id/frameLayout_fragment_community"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/chipgroup_fragment_community"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fragment_community"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:src="@drawable/ic_plus"
        android:backgroundTint="@color/background_light_green"
        app:tint="@color/grey_09"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>