<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="MainViewModel"
            type="com.edu.mf.viewmodel.MainViewModel" />

        <variable
            name="CategoryIdx"
            type="Integer" />

        <variable
            name="PictureIdx"
            type="Integer" />

        <variable
            name="VoiceResultWord"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview_fragment_voice_result_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:breakStrategy="high_quality"
            android:fontFamily="@font/kakao_bold"
            android:text="@string/fragment_voice_result_text_subtitle"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_fragment_voice_result_title" />

        <TextView
            android:id="@+id/textview_fragment_voice_result_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/kakao_otf_bold"
            android:gravity="left"
            android:text="@string/fragment_voice_result_text_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="#fed0bb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_fragment_voice_result_subtitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout_fragment_voice_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/picture_rounded_rectangle"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="60dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/imageview_fragment_voice_result"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    app:imgSrc="@{@string/fragment_drawing_result_list_imageview(CategoryIdx, PictureIdx)}"
                    app:layout_constraintBottom_toTopOf="@id/textview_fragment_voice_result"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textview_fragment_voice_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jalnan"
                    android:gravity="center"
                    android:onClick="@{()->MainViewModel.startTTS()}"
                    android:text="@{VoiceResultWord}"
                    android:textColor="#4a5759"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_voice_result_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/drawing_dialog"
            android:backgroundTint="@color/white"
            android:paddingStart="20dp"
            android:paddingTop="54dp"
            android:paddingEnd="20dp"
            android:paddingBottom="18dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/textview_fragment_voice_result_redrawing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dialog_fragment_voice_result_textview"
                android:textColor="@color/grey_02"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/constraintlayout_fragment_voice_result_redrawing"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout_fragment_voice_result_redrawing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_fragment_voice_result_redrawing">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_fragment_voice_result_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/drawing_dialog_button_border"
                    android:elevation="4dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/dialog_fragment_voice_result_main_button"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_fragment_voice_result_redrawing"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_fragment_voice_result_redrawing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="70dp"
                    android:background="@drawable/drawing_dialog_button_fill"
                    android:elevation="4dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/dialog_fragment_voice_result_button"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/button_fragment_voice_result_main"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>